# Biophysical_Essentials

./: .gitignore  BiophysicalEssentials.spec  Biophysical_Essentials.code-workspace  E9Batch.In  Figures.qrc  LICENSE  README.md  config_copy.py.py  enviroment.yml  environment.yml  environment_r_09_23.yml  git_ssh_key  git_ssh_key.pub  mac_env_r_09_23.yml  main_window.py  q  requirements.txt  requirements_17112023.txt  self_config_saved.py  tmp
src/: .coverage  .csv  .require.swp  .~lock.trial.csv#  ABFclass.py  BiophysicalEssentials.spec  CClamp.py  CurrentClamp.py  E9Batch.In  Figures_rc.py  Menu_button.css  Menu_button_white.css  Pandas_Table.py  PostSql_Handler.py  Worker.py  WorkerDB.py  WorkerSignals.py  analysis_database.db  animated_ap.py  ap_trial.py  backend_elements.py  backend_manager.py  buttons.qrc  buttons_rc.py  canvas_manager.py  data_db.py  dialog_fitting.py  dialog_select_analysis_function.py  draggable_lines.py  duck_db_analysis_database.db  duck_db_analysis_database.db (Maximilians-MacBook-Pro.locals in Konflikt stehende Kopie 2022-06-14).wal  duck_db_analysis_database.db (Maximilians-MacBook-Pro.locals in Konflikt stehende Kopie 2022-07-12).wal  duck_db_analysis_database.db (heka-pcs in Konflikt stehende Kopie 2022-11-15).wal  duck_db_analysis_database.db.wal  frontend.py  frontend_style.py  groupbox_resizing_class.py  gui_elements.py  heka_reader.py  hello.xml  (+44 more)
src/.ipynb_checkpoints/: test_db_jupyter-checkpoint.ipynb
src/Backend/: backend_manager.py  cancel_button_delegate.py  online_analysis_manager.py  plot_widget_manager.py  tokenmanager.py  (+3 more)
(+851 files in other folders)
