[tool.poetry]
name = "biophysicalessentials"
version = "0.11.0"
description = "Data Analysis Platform for Electrophysiological Recordings"
authors = ["David Zimmermann, Maximilian Zeidler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
PySide6 = "^6.6.1"
duckdb = "^0.10.2"
qbstyles = "^0.1.4"
numpy = "^1.26.3"
natsort = "^8.4.0"
pandas = "^1.5.3"
matplotlib = "^3.8.2"
pillow = "^10.2.0"
pyqtgraph = "^0.13.3"
pytest = "^8.1.1"
qt-material = "^2.14"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
seaborn = "^0.11.2"
statsmodels = "^0.14.1"
statannotations = "^0.6.0"
pyabf = "^2.3.8"
mplcursors = "^0.5.3"
contourpy = "^1.2.0"
threadpoolctl = "3.2.0"
tzdata = "^2023.4"
picologging = "^0.9.3"
sqlalchemy = "^2.0.25"
pyinstaller = "^6.3.0"
pytest-qt = "^4.3.1"
pypylon = "^3.0.1"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
